--- a/jdnp3-ui-web-outstation/src/main/webapp/device_exp.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device_exp.xhtml
@@ -13,6 +13,7 @@
 	<h:outputScript library="js" name="device/schedule.js" />
 	<h:outputScript library="js" name="device/pointlist.js" />
 	<h:outputScript library="js" name="device/ui.js" />
+	<h:outputScript library="js" name="device/analogoutput.js" />
 	<h:outputScript library="js" name="device/iin.js" />
 	<h:outputScript library="js" name="device/analoginput.js" />
 	<h:outputScript library="js" name="device/binaryoutput.js" />
@@ -70,6 +71,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 					<span>Analog Inputs</span>
 				</div>
 				<table id="analogInputTable" class="value-table">
+				</table>
+			</div>
+		
+			<div id="analogOutputs" style="display: none;">
+				<div style="margin-bottom: 2px;" class="section-header">
+					<span>Analog Outputs</span>
+				</div>
+				<table id="analogOutputTable" class="value-table">
 				</table>
 			</div>
 		</h:form>
