--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -10,6 +10,7 @@
 	xmlns:j="http://sf.net/jdnp3/facelets"
 	xmlns:jdnp3="http://java.sun.com/jsf/composite/jdnp3">
 <h:head>
+	<h:outputScript library="js" name="bindings.js" />
 	<h:outputScript library="js" name="schedule.js" />
 	<h:outputScript library="js" name="pointlist.js" />
 	<h:outputScript library="js" name="ui.js" />
@@ -104,6 +105,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<span>Counters</span>
 			</div>
 			<table id="counterTable" class="value-table">
+			</table>
+		</div>
+	
+		<div>
+			<div style="margin-bottom: 2px;" class="section-header">
+				<span>Bindings</span>
+			</div>
+			<table style="margin-left:auto; margin-right: auto;" id="bindingsTable">
 			</table>
 		</div>
 	
