Removing PrimeFaces dependencies.

--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -46,7 +46,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 				<tr>
 					<td class="full-text-field-label">Connection Status</td>
 					<td>
-						<div class="zero-padding" style="top: 0px; bottom: 0px; left: 0px; right: 0px;">
+						<div style="top: 0px; bottom: 0px; left: 0px; right: 0px;">
 							<div class="full-text-field-value-view" style="width: 100%" title="Status">
 								<div style="display: table; width: 100%">
 									<span class="full-text-field-value" style="text-align: center; vertical-align: middle; display: table-cell;"><span id="statusText" style="color: red;">Disconnected</span></span>
@@ -83,7 +83,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			</table>
 		</div>
 	
-		<div id="analogInputs" style="display: none;">
+		<div id="analogInputs" class="pointsContainer" style="display: none;">
 			<div style="margin-bottom: 2px;" class="section-header">
 				<span>Analog Inputs</span>
 			</div>
