--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -17,7 +17,7 @@
 <h:body>
 	<script>
 		document.addEventListener("DOMContentLoaded", function(event) {
-			var location = document.location.toString().replace(/\bhttp/,'ws').replace(/\/\/.*/,'//') + window.location.host + '/ws/station' + window.location.search;
+			var location = document.location.toString().replace(/\bhttp/,'ws').replace(/\/\/.*/,'//') + window.location.host + '/ws/device' + window.location.search;
 			window['station'] = new jdnp3.station.Station(location);
 		});
 	</script>
