--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -26,12 +26,12 @@
 		<h:outputStylesheet library="css" name="general.css" />
 	</f:facet>
 	
-	<div>
+	<div style="font-size: 1.2em;">
 		<div style="float: left;">
 			<div style="margin-bottom: 2px;" class="section-header">
 				<span>Device Selection</span>
 			</div>
-			<div id="device-selection" style="display: block; font-size: 24px;">
+			<div id="device-selection" class="station-selection" style="display: block;">
 			</div>
 		</div>
 		<div style="overflow: auto;">
@@ -39,7 +39,7 @@
 				<div style="margin-bottom: 2px;" class="section-header">
 					<span>Overview</span>
 				</div>
-				<div style="font-size: 24px;">
+				<div>
 					<div><span>Status: </span><span id="statusText">Disconnected</span></div>
 				</div>
 			</div>
