--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div style="overflow: auto;">
-			<div style="margin-left: 10px;">
+			<div style="margin-left: 0.75em;">
 				<div style="margin-bottom: 2px;" class="section-header">
 					<span>Overview</span>
 				</div>
