--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -74,7 +74,15 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			<table id="binaryInputTable" class="value-table">
 			</table>
 		</div>
-	
+
+		<div id="doubleBitBinaryInputs" style="display: none;">
+			<div style="margin-bottom: 2px;" class="section-header">
+				<span>Double Bit Binary Inputs</span>
+			</div>
+			<table id="doubleBitBinaryInputTable" class="value-table">
+			</table>
+		</div>
+
 		<div id="binaryOutputs" style="display: none;">
 			<div style="margin-bottom: 2px;" class="section-header">
 				<span>Binary Outputs</span>
