Adding double bit binary UI element

--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -19,6 +19,7 @@
 	<h:outputScript library="js" name="analoginput.js" />
 	<h:outputScript library="js" name="binaryoutput.js" />
 	<h:outputScript library="js" name="binaryinput.js" />
+	<h:outputScript library="js" name="doublebitbinaryinput.js" />
 	<h:outputScript library="js" name="device.js" />
 	<h:outputScript library="js" name="message.js" />
 </h:head>
