Creating a search function

--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -44,6 +44,16 @@
 				</div>
 			</div>
 		</div>
+		<div style="overflow: auto;">
+			<div style="margin-left: 0.75em;">
+				<div style="margin-bottom: 2px;" class="section-header">
+					<span>Search</span>
+				</div>
+				<div>
+					<input style="position: static; border: 1px solid black; padding: 0px; width: 100%" class="text-field-value"></input>
+				</div>
+			</div>
+		</div>
 	</div>
 </h:body>
 </html>
