--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -49,8 +49,13 @@
 				<div style="margin-bottom: 2px;" class="section-header">
 					<span>Search</span>
 				</div>
-				<div>
-					<input style="position: static; border: 1px solid black; padding: 0px; width: 100%" class="text-field-value"></input>
+				<div style="position: relative; width: 100%; height: 2em; border: 1px solid black; box-sizing: border-box; padding-top: 2px; cursor: default;">
+					<div style="position: absolute; width: 1.5em; left: 0;">
+						&#x1F50D;
+					</div>
+					<div style="position: absolute; left: 1.5em; right: 0em;">
+						<input style="position: relative; top: 0; width: 100%; box-sizing: border-box; text-align: left; border: none;" class="text-field-value"></input>
+					</div>
 				</div>
 			</div>
 		</div>
