Adding tags to the options panel so they may be easily cut and paste

--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -49,7 +49,7 @@
 				<div style="margin-bottom: 2px;" class="section-header">
 					<span>Search</span>
 				</div>
-				<div style="position: relative; width: 100%; height: 2em; border: 1px solid black; box-sizing: border-box; padding-top: 2px; cursor: default;">
+				<div style="position: relative; width: 100%; height: 2em; border: 1px solid black; box-sizing: border-box; padding-top: 0.25em; cursor: default;">
 					<div style="position: absolute; width: 1.5em; left: 0;">
 						&#x1F50D;
 					</div>
